--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-antd-ui",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -12,12 +12,14 @@
   "files": [
     "dist"
   ],
-  "devDependencies": {
+  "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
     "@uiw/codemirror-theme-quietlight": "^4.21.21",
     "@uiw/codemirror-theme-vscode": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
-    "antd": "~5.9.0",
+    "antd": "~5.9.0"
+  },
+  "devDependencies": {
     "prettier": "^3.1.1",
     "typescript": "~5.3.3"
   },
