--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-antd-ui",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -17,7 +17,8 @@
     "@uiw/codemirror-theme-quietlight": "^4.21.21",
     "@uiw/codemirror-theme-vscode": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
-    "antd": "~5.9.0"
+    "antd": "~5.9.0",
+    "dayjs": "^1.11.10"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
