--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "json-antd-ui",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w",
-    "prepublish": "npm run build"
+    "dev": "tsc -w"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@codemirror/lang-json": "^6.0.1",
+    "@types/react-beautiful-dnd": "^13.1.7",
     "@uiw/codemirror-theme-quietlight": "^4.21.21",
     "@uiw/codemirror-theme-vscode": "^4.21.21",
     "@uiw/react-codemirror": "^4.21.21",
     "antd": "~5.9.0",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
