--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -2,5 +2,11 @@
   "parserOptions": {
     "ecmaVersion": "latest", // 或更高
     "sourceType": "module"
+  },
+  "extends": ["plugin:react/recommended"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
